//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Artist {
  id String [pk]
  slug String [unique, not null]
  name String [unique, not null]
  imageUrl String
  songs Song [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Song {
  id String [pk]
  slug String [unique, not null]
  title String [not null]
  imageUrl String
  submitBy User [not null]
  artists Artist [not null]
  lyrics Lyric [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Lyric {
  id String [pk]
  slug String [unique, not null]
  songId String [not null]
  song Song [not null]
  text String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table User {
  id String [pk]
  submitSongs Song [not null]
  fullName String [not null]
  email String [unique, not null]
  password Password
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Password {
  id String [pk]
  hash String [not null]
  user User [not null]
  userId String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table ArtistToSong {
  songsId String [ref: > Song.id]
  artistsId String [ref: > Artist.id]
}

Table SongToUser {
  submitbyId String [ref: > User.id]
  submitsongsId String [ref: > Song.id]
}

Ref: Lyric.songId > Song.id [delete: Cascade]

Ref: Password.userId - User.id [delete: Cascade]